force-app/main/default/objects/Orga_BU__c/Orga_BU__c.object-meta.xml
<CustomObject>
    <label>Business Unit</label>
    <nameField>
        <label>BU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>