force-app/main/default/objects/Orga_BU__c/fields/Assortment_Strat__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Strat__c</fullName>
    <label>Assortment Strat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strat0</fullName>
                <default>true</default>
                <label>Strat0</label>
            </value>
            <value>
                <fullName>Strat1</fullName>
            </value>
            <value>
                <fullName>Strat2</fullName>
            </value>
            <value>
                <fullName>Strat3</fullName>
            </value>
            <value>
                <fullName>Strat4</fullName>
            </value>
            <value>
                <fullName>Strat5</fullName>
            </value>
            <value>
                <fullName>Strat6</fullName>
            </value>
            <value>
                <fullName>Strat7</fullName>
            </value>
            <value>
                <fullName>Strat8</fullName>
            </value>
            <value>
                <fullName>Strat9</fullName>
            </value>
            <value>
                <fullName>Strat10</fullName>
            </value>
            <value>
                <fullName>Strat11</fullName>
            </value>
            <value>
                <fullName>Strat12</fullName>
            </value>
            <value>
                <fullName>Strat13</fullName>
            </value>
            <value>
                <fullName>Strat14</fullName>
            </value>
            <value>
                <fullName>Strat15</fullName>
            </value>
            <value>
                <fullName>Strat16</fullName>
            </value>
            <value>
                <fullName>Cplt0</fullName>
            </value>
            <value>
                <fullName>Cplt1</fullName>
            </value>
            <value>
                <fullName>Cplt2</fullName>
            </value>
            <value>
                <fullName>Cplt3</fullName>
            </value>
            <value>
                <fullName>Cplt4</fullName>
            </value>
            <value>
                <fullName>Cplt5</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>