force-app/main/default/objects/Orga_BU__c/fields/BU_CDate__c.field-meta.xml
<CustomField>
    <fullName>BU_CDate__c</fullName>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>