force-app/main/default/objects/Orga_BU__c/fields/BU_Code__c.field-meta.xml
<CustomField>
    <fullName>BU_Code__c</fullName>
    <description>Internal code of the client for the BU</description>
    <externalId>true</externalId>
    <label>Business Unit Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>