force-app/main/default/objects/Orga_BU__c/fields/Business_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Type__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Type</label>
    <type>Text</type>
</CustomField>