force-app/main/default/objects/Orga_BU__c/fields/Ext_id__c.field-meta.xml
<CustomField>
    <fullName>Ext_id__c</fullName>
    <externalId>true</externalId>
    <label>Ext_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>