force-app/main/default/objects/Orga_BU__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <label>Commercial Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>