force-app/main/default/objects/Orga_BU__c/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <label>Mission</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
                <default>true</default>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Merchandizing</fullName>
            </value>
            <value>
                <fullName>Buying</fullName>
            </value>
            <value>
                <fullName>Sales development</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Floor animation</fullName>
            </value>
            <value>
                <fullName>Business Control</fullName>
            </value>
            <value>
                <fullName>Quality control</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>