force-app/main/default/objects/Orga_BU__c/fields/Multiple_Complementary__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Complementary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if the Banner/Channel allow for multiple complementary strat. selections.</description>
    <inlineHelpText>Autoriser le gestion muti-complémentaire.</inlineHelpText>
    <label>Multiple Complementary</label>
    <type>Checkbox</type>
</CustomField>