force-app/main/default/objects/Orga_BU__c/fields/Numeric_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Distribution__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Numeric Distribution</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>