force-app/main/default/objects/Orga_BU__c/fields/Numeric_Distribution_N1__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Distribution_N1__c</fullName>
    <label>Numeric Distribution N+1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>