force-app/main/default/objects/Orga_BU__c/fields/Panel_Name__c.field-meta.xml
<CustomField>
    <fullName>Panel_Name__c</fullName>
    <label>Panel Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>