force-app/main/default/objects/Orga_BU__c/fields/Reference_Country__c.field-meta.xml
<CustomField>
    <fullName>Reference_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the real country name.</description>
    <label>Reference Country</label>
    <referenceTo>Country_List__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>