force-app/main/default/objects/Orga_BU__c/fields/Related_Client__c.field-meta.xml
<CustomField>
    <fullName>Related_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BU related to the client (CPG feature)</description>
    <label>Related Client</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units</relationshipName>
    <type>Lookup</type>
</CustomField>