force-app/main/default/objects/Orga_BU__c/fields/SellOut_Fact_N1__c.field-meta.xml
<CustomField>
    <fullName>SellOut_Fact_N1__c</fullName>
    <label>SellOut Fact N+1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>