force-app/main/default/objects/Orga_BU__c/fields/Set_Assortment_Budget_BU_Source__c.field-meta.xml
<CustomField>
    <fullName>Set_Assortment_Budget_BU_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set filter for Assortment (Assortment_BU) BU Source for Budget record type</description>
    <label>Set Assortment Budget BU Source</label>
    <type>Checkbox</type>
</CustomField>