force-app/main/default/objects/Orga_BU__c/fields/Set_BU_List_Entity__c.field-meta.xml
<CustomField>
    <fullName>Set_BU_List_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set filter for BU Authorized in BU List</description>
    <label>Set BU List Entity</label>
    <type>Checkbox</type>
</CustomField>