force-app/main/default/objects/Orga_BU__c/fields/Set_Com_Condition_Master_BU__c.field-meta.xml
<CustomField>
    <fullName>Set_Com_Condition_Master_BU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set filter for Tariff Condition lib (Pol_Com_Condition) Master BU filtering</description>
    <label>Set Com Condition Master BU</label>
    <type>Checkbox</type>
</CustomField>