force-app/main/default/objects/Orga_BU__c/fields/Set_Contract_BU_Source__c.field-meta.xml
<CustomField>
    <fullName>Set_Contract_BU_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set a filter for contract BU Source (Dealing from) lookup.</description>
    <inlineHelpText>Set a filter for contract BU Source (Dealiing from) lookup.</inlineHelpText>
    <label>Set Contract BU Source</label>
    <type>Checkbox</type>
</CustomField>