force-app/main/default/objects/Orga_BU__c/fields/Set_Contract_Discount_Main_Term__c.field-meta.xml
<CustomField>
    <fullName>Set_Contract_Discount_Main_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set a filter for contract Discount BU Scope (BU Scope) lookup with Main Term record types.</description>
    <label>Set Contract Discount Main Term</label>
    <type>Checkbox</type>
</CustomField>