force-app/main/default/objects/Orga_BU__c/fields/Set_Contract_Discount_Sub_Term__c.field-meta.xml
<CustomField>
    <fullName>Set_Contract_Discount_Sub_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set a filter for contract Discount BU Scope (BU Scope) lookup with SubTerm record types.</description>
    <label>Set Contract Discount Sub Term</label>
    <type>Checkbox</type>
</CustomField>