force-app/main/default/objects/Orga_BU__c/fields/Set_NS_MasterBU__c.field-meta.xml
<CustomField>
    <fullName>Set_NS_MasterBU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business Unit to be link to Nego Scope as a Master BU via the object Sup_Suo_NegoScope__c</description>
    <inlineHelpText>Business Unit to be link to Nego Scope as a Master BU via the object Sup_Suo_NegoScope__c</inlineHelpText>
    <label>Set NS Master BU</label>
    <type>Checkbox</type>
</CustomField>