force-app/main/default/objects/Orga_BU__c/fields/SiteOfSales_Number_P2__c.field-meta.xml
<CustomField>
    <fullName>SiteOfSales_Number_P2__c</fullName>
    <label>SiteOfSales Number N-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>