force-app/main/default/objects/Orga_BU__c/fields/SPKCDiscount__c.field-meta.xml
<CustomField>
    <fullName>SPKCDiscount__c</fullName>
    <label>SPKCDiscount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DiscountincVAT</fullName>
            </value>
            <value>
                <fullName>DiscountexVAT</fullName>
            </value>
            <value>
                <fullName>Revenue inc VAT</fullName>
            </value>
            <value>
                <fullName>No information</fullName>
            </value>
            <value>
                <fullName>Leclerc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>