force-app/main/default/objects/Orga_BU__c/fields/SPKCInvoicedAmount__c.field-meta.xml
<CustomField>
    <fullName>SPKCInvoicedAmount__c</fullName>
    <label>SPKCInvoicedAmount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoiced Amount ex VAT</fullName>
            </value>
            <value>
                <fullName>Invoiced Amount inc VAT</fullName>
            </value>
            <value>
                <fullName>VAT Amount</fullName>
            </value>
            <value>
                <fullName>No information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>