force-app/main/default/objects/Orga_BU__c/fields/SPKCQuantityInvoiced__c.field-meta.xml
<CustomField>
    <fullName>SPKCQuantityInvoiced__c</fullName>
    <label>SPKCQuantityInvoiced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Quantity</fullName>
            </value>
            <value>
                <fullName>Invoiced Quantity</fullName>
            </value>
            <value>
                <fullName>Leclerc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>