force-app/main/default/objects/Orga_BU__c/fields/SPKERCADELACLogo__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACLogo__c</fullName>
    <formula>IF ( RecordType.DeveloperName =&quot;Channel&quot;,

IMAGE(&apos;/resource/LogoChannel/LogoChannel/&apos; + BU_Code__c +&apos;.png&apos;, &apos;&apos; , 45, 90),

IF ( RecordType.DeveloperName =&quot;Country&quot;,

IMAGE(&apos;/resource/LogoCountry/LogoCountry/&apos; + BU_Code__c +&apos;.png&apos;, &apos;&apos; , 45, 90),

IF ( RecordType.DeveloperName =&quot;Assortment_Cluster&quot;,

IMAGE(&apos;/resource/LogoCluster/LogoCluster/&apos; + BU_Code__c +&apos;.png&apos;, &apos;&apos; , 45, 90),

IF ( RecordType.DeveloperName =&quot;Wharehouse&quot;,

IMAGE(&apos;/resource/LogoWharehouse/LogoWharehouse/&apos; + BU_Code__c +&apos;.png&apos;, &apos;&apos; , 45, 90),

IF ( RecordType.DeveloperName =&quot;Banner&quot;,

IMAGE(&apos;/resource/LogoBU/LogoBU/&apos; + BU_Code__c +&apos;.png&apos;, &apos;&apos; , 45, 90), NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPKERCADELAC Logo</label>
    <type>Text</type>
</CustomField>