force-app/main/default/objects/Orga_BU__c/fields/Store_nb__c.field-meta.xml
<CustomField>
    <fullName>Store_nb__c</fullName>
    <description>Stores linked to the list</description>
    <inlineHelpText>Nombre de magasins</inlineHelpText>
    <label>#Store</label>
    <summaryFilterItems>
        <field>Orga_BU_List_Detail__c.Format__c</field>
        <operation>equals</operation>
        <value>Store</value>
    </summaryFilterItems>
    <summaryForeignKey>Orga_BU_List_Detail__c.Entity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>