force-app/main/default/objects/Orga_BU__c/fields/Weighted_Distribution_InnovRise_M10__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Distribution_InnovRise_M10__c</fullName>
    <label>WD Innov Rise M10</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>