force-app/main/default/objects/Orga_BU__c/fields/Weighted_Distribution_Manual_P1__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Distribution_Manual_P1__c</fullName>
    <label>Weighted Distribution Manual N-1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>