force-app/main/default/objects/Orga_BU__c/fields/Weighted_Distribution_SwitchRise_M12__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Distribution_SwitchRise_M12__c</fullName>
    <label>WD Switch Rise M12</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>