force-app/main/default/objects/Orga_BU__c/recordTypes/Assortment_Cluster.recordType-meta.xml
<RecordType>
    <fullName>Assortment_Cluster</fullName>
    <active>true</active>
    <description>Assortment layer of each banner</description>
    <label>Assortment Cluster</label>
</RecordType>