force-app/main/default/objects/Orga_BU__c/recordTypes/Assortment_Cluster_List.recordType-meta.xml
<RecordType>
    <fullName>Assortment_Cluster_List</fullName>
    <active>true</active>
    <description>Give cluster of Assortment cluster =group some clusters for reference in Assortment detail position (used in multi-complementary management)</description>
    <label>Assortment Cluster List</label>
</RecordType>