force-app/main/default/objects/Orga_BU__c/recordTypes/Banner.recordType-meta.xml
<RecordType>
    <fullName>Banner</fullName>
    <active>true</active>
    <description>Define Banner&apos;s levels of your entity</description>
    <label>Banner</label>
</RecordType>